--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.1.1"
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
